<resources>
    <string name="app_name">Calculate</string>
    <string name="result">result</string>
    <string name="equal">=</string>
    <string name="clear">c</string>
    <string name="remainder">%</string>
    <string name="mult">✕</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="div">÷</string>
    <string name="seven">7</string>
    <string name="nine">9</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="eight">8</string>
    <string name="four">4</string>
    <string name="six">6</string>
    <string name="dot">.</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="five">5</string>
    <string name="on">on</string>
    <string name="night">night</string>
    <string name="del">DEL</string>
    <string name="mode">Mode</string>
    <string name="root">^</string>
    <string name="_0">0</string>
</resources>