<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black4"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/mainLayout">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:background="@drawable/result_corner_shpae"
        android:padding="10dp"
        android:textSize="30sp"
        android:textStyle="bold">

        <TextView
            android:id="@+id/fNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="20dp"
            android:textColor="@color/white"
             />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_marginStart="14dp"
            android:textStyle="bold"

             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/modetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/pink3"
            android:layout_marginTop="10dp"
            android:layout_marginStart="265dp"/>


        <Switch
            android:id="@+id/mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:paddingEnd="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="500dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="25dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/clear"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/clear"
                android:textColor="@color/pink1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/root"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/root"
                android:textColor="@color/pink1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/deleteLast"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/del"
                android:textColor="@color/pink1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/div"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/div"
                android:textColor="@color/pink1"
                android:textSize="24sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/seven"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/eight"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/nine"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mult"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/mult"
                android:textColor="@color/pink1"
                android:textSize="24sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/four"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/five"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/six"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sub"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/sub"
                android:textColor="@color/pink1"
                android:textSize="24sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/one"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/two"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/three"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/add"
                android:textColor="@color/pink1"
                android:textSize="24sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/remainder"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/remainder"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/zero"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/dot"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/btn_shape"
                android:padding="10dp"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/equal"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/operation_button"
                android:padding="10dp"
                android:text="@string/equal"
                android:textColor="@color/black2"
                android:textSize="24sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>


</LinearLayout>